added support of defining module

--- a/src/res/text/navigationtabs.properties
+++ b/src/res/text/navigationtabs.properties
@@ -1,2 +1,3 @@
 tab1=Swform?id=0,Add Software,Add 3rd party software for review and approval 
 tab2=Software,Browse,Browse all software titles 
+tab3=Mdform,Add module,Add platform/app module
